# GraphicsCollection

./: .gitignore  README.md
BezierTessellation/: BezierSurface.h  CMakeLists.txt  README.md  SimpleBezier11.cpp  SimpleBezier11.hlsl  SimpleBezier11_2015.vcxproj  SimpleBezier11_2015_Win10.vcxproj.filters  SimpleBezierTri11.hlsl  TesseBezierSurface.hlsl  TesseBezierSurface.sln  TesseBezierSurface.vcxproj  TesseBezierSurface.vcxproj.filters
BezierTessellation/shader/: TesseBezierSurface.hlsl  TesseQuad.hlsl  TesseQuad_new.hlsl  drawCameraVector.hlsl
BezierTessellation/src/: App.cpp  App.h  BezierSurface.cpp  BezierSurface.h  Camera.h  CameraLayer.cpp  CameraLayer.h  IDataSource.cpp  IDataSource.h  ShaderContainer.cpp  ShaderContainer.h  ShaderManager.cpp  ShaderManager.h  SimpleBezierSurfaceViewer.cpp  TessSurface.cpp  TessSurface.h  main.cpp  quad.h  utahTeapot.h
DeferredRenderInOGL/: .gitignore  CMakeLists.txt
DeferredRenderInOGL/WIN/ProjectsFile/: DeferredRender.sln  DeferredRender.vcxproj  DeferredRender.vcxproj.filters
DeferredRenderInOGL/WIN/ProjectsFile/shader/: diagnostic.frag.glsl  finalPass.frag  finalPass.vert  geometryPass.frag  geometryPass.vert  light.frag  light.vert  observer.frag  observer.vert  pass.frag.glsl  pass.vert.glsl  phong.frag.glsl  phong.vert.glsl  plain.frag.glsl  plain.vert.glsl  shade.vert.glsl  shadowmap.frag.glsl  shadowmap.vert.glsl  visualNormal.frag.glsl  visualNormal.geom.glsl  visualNormal.vert.glsl
DeferredRenderInOGL/src/: Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  camera.cpp  camera.h  example.cpp  glHandleUI.cpp  glRoutine.cpp  glRoutine.h  glslUtility.cpp  glslUtility.h  main.cpp  objLoader.cpp  objLoader.h  shader.cpp  shader.h  util.cpp  util.h  variables.h
DeferredTexturing/: .gitignore  CMakeLists.txt
DeferredTexturing/BindlessDeferred/: AppConfig.h  AppSettings.cpp  AppSettings.cs  AppSettings.h  AppSettings.hlsl  BindlessDeferred.cpp  BindlessDeferred.h  Deferred.hlsl  Mesh.hlsl  MeshRenderer.cpp  MeshRenderer.h  Shading.hlsl  project.sublime-project
DeferredTexturing/SampleFramework12/v1.01/: App.cpp  Utility.h
DeferredTexturing/SampleFramework12/v1.01/Graphics/: DX12.cpp  DX12.h  GraphicsTypes.cpp  GraphicsTypes.h  PostProcessHelper.cpp  Skybox.cpp
DeferredTexturing/SampleFramework12/v1.01/Shaders/: Shadows.hlsl
EnvironmentMap/LightModel/: 3DScanModelRender.fx  BackgroundRender.fx  EnvMap.fx  LightModel.cpp  LightModel_2013.vcxproj  LightModel_2013.vcxproj.filters  LightModel_2015.vcxproj  LightModel_2015.vcxproj.filters  PhongRender.fx  Tutorial12.rc  Tutorial12_2013.vcxproj  dragon.sdkmesh  meshgenerator.h  simpleRender.fx
EnvironmentMap/tutorial12/: EnvMap.fx  Tutorial12.cpp  Tutorial12.fx  Tutorial12_2013.vcxproj  Tutorial12_2013.vcxproj.filters  Tutorial12_2015.vcxproj  Tutorial12_2015.vcxproj.filters  meshgenerator.h  shadingModel.fx
OceanSimulation/: Camera.cpp  Camera.h  D3D11Effect.cpp  D3D11Effect.h  Logger.cpp  Logger.h  OceaSurface.cpp  OceanSimulation.cpp  OceanSimulation_2013.vcxproj  OceanSimulation_2013.vcxproj.filters  OceanSimulation_2015.vcxproj  OceanSimulation_2015.vcxproj.filters  OceanSurface.h  ParameterSet.h  PerlinNoise.cpp  PerlinNoise.h  PlaneMesh.h  Tutorial11_2015.vcxproj  cpueffect.fx  drawfrustum.fx  log.txt  oceanSimulation.fx
SimpleBezier11/: SimpleBezier11.cpp  SimpleBezier11.hlsl  SimpleBezier11_2013.vcxproj  SimpleBezier11_2013.vcxproj.filters  SimpleBezier11_2015.vcxproj  earth-4k.dds  teapotdata.h
Tessellation/: README.md
Tessellation/src/: App.cpp  App.h  BezierSurface.cpp  BezierSurface.h  Camera.cpp  Camera.h  CameraLayer.cpp  CameraLayer.h  Logger.cpp  Logger.h  ShaderContainer.cpp  ShaderContainer.h  ShaderManager.h  SimpleBezierSurfaceViewer.cpp  TesseBezierSurface.hlsl  main.cpp  quad.h  teapotdata.h
Tessellation/texture/: grace_cross.hdr
Tessellation/vs2015/: vs2015.sln
Tessellation/vs2015/vs2015/: vs2015.vcxproj  vs2015.vcxproj.filters
Tessellation/vs2015/vs2015/shader/: TesseBezierSurface.hlsl  TesseBezierSurface_tessFactor.hlsl
Vulkan-Forward-Plus/: .gitignore  CMakeLists.txt
Vulkan-Forward-Plus/src/: ShowBase.cpp  util.cpp  util.h
Vulkan-Forward-Plus/src/renderer/: VulkanRenderer.cpp  VulkanRenderer.h
Vulkan-Forward-Plus/src/shaders/: forwardplus.frag  forwardplus.vert
